# neodyme_clean_setup

./: Cargo.toml  README.md
pocs/: Cargo.toml
