[package]
name = "pocs"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = { version = "0.2.0" }

# add a path here

solana-program = "1.8.14"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-token = { version = "*", features = ["no-entrypoint"] }

owo-colors = "3.1.0"
solana-logger = "1.8.14"

[lib]
